<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="16dp">

            <!-- Texto inicial -->
            <TextView
                android:id="@+id/generalDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_text"
                android:textSize="16sp"
                android:paddingBottom="16dp" />

            <!-- Primeira imagem -->
            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hell_let_loose_image1"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/soldier_running"/>

            <!-- Segundo bloco de texto -->
            <!-- Seção de Funcionalidades -->
            <TextView
                android:id="@+id/featuresTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/featuresDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features_description"
                android:textSize="16sp"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <!-- Lista de Funcionalidades -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feature_01"
                    android:textSize="16sp"
                    android:paddingBottom="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feature_02"
                    android:textSize="16sp"
                    android:paddingBottom="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feature_03"
                    android:textSize="16sp"
                    android:paddingBottom="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feature_04"
                    android:textSize="16sp"
                    android:paddingBottom="4dp" />
            </LinearLayout>

            <!-- Segunda imagem -->
            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hell_let_loose_image2"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/bombing_run" />

            <!-- Seção de Mapas -->
            <TextView
                android:id="@+id/mapsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maps"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/mapsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maps_description"
                android:textSize="16sp"
                android:paddingBottom="16dp" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hell_let_loose_image3"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/game_map"/>

            <!-- Links Importantes -->
            <TextView
                android:id="@+id/linksTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/links"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/linkWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textSize="16sp"
                android:autoLink="web"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/linkStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steam_page"
                android:textSize="16sp"
                android:autoLink="web"
                android:paddingBottom="16dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/black">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/soldier"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/image_view_description" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/title" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_web"
        android:contentDescription="@string/official_website"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/cardview_dark_background" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
